2001-10-08  Jeffrey A Law  <law@cygnus.com>

	* sibcall.c (optimize_sibling_and_tail_recursive_calls): Call
	purge_mem_unchanging_flag on all instructions, not just on those
	before NOTE_INSN_FUNCTION_BEG.

2001-10-07  Joseph S. Myers  <jsm28@cam.ac.uk>

	* doc/gcc.texi: Fix spelling error of "separate" as "seperate".

2001-10-07  Joseph S. Myers  <jsm28@cam.ac.uk>

	* doc/c-tree.texi, doc/tm.texi: Consistently put NULL and
	NULL_TREE inside @code.

2001-10-07  Joseph S. Myers  <jsm28@cam.ac.uk>

	* doc/gcc.texi: Document consistent style of "32-bit",
	"Objective-C", and "@code{NULL}".

2001-10-05  Richard Henderson  <rth@redhat.com>

	* i386.md (movsi_xor): Export.
	(setcc peep2): Use it when available.

2001-10-05  Richard Henderson  <rth@redhat.com>

	* dwarf2out.c (FRAME_BEGIN_LABEL): New.
	(output_call_frame_info): Use it instead of __FRAME_BEGIN__ and
	the gas section-name-as-label feature.

2001-10-04  Loren J. Rittle  <ljrittle@acm.org>

	* Makefile.in (STAGE2_FLAGS_TO_PASS): Remove patch which
	propagated HOST_CC.

Thu Oct  4 16:18:12 CEST 2001  Jan Hubicka  <jh@suse.cz.

	* i386.c (setcc peep2): Do not use clobber of flags.

2001-10-02  Zack Weinberg  <zack@codesourcery.com>

	* gcc.c (main): Set this_file_error if the appropriate
	compiler for a language has not been installed.

2001-10-01  Loren J. Rittle  <ljrittle@acm.org>

	* Makefile.in (STAGE2_FLAGS_TO_PASS): Propagate HOST_CC.
	(fixinc.sh): Map CC, CFLAGS and LDFLAGS to HOST_* versions for
	later recursive make invocation.

2001-10-01  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* config/m68hc11/m68hc11.md ("add-split"): Fix add split when
	operand 2 is the stack pointer.
	("addr-peephole"): Fix address computation peephole when operand 2
	is the stack pointer.

2001-09-30  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* config/m68hc11/m68hc11.md ("cmpqi_1"): Fix constraints.
	("tsthi_1"): Avoid allocation in register y.
	("*movqi_68hc12"): Reorganize and fix constraints.